# optimal-market-maker-exchange-contract-drl

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: exchange_cfg.json  market_cfg.json  market_maker_cfg.json  train_cfg.json  train_exchange_cfg.json  train_mm_cfg.json
notebooks/: plotting_notebook.ipynb  training_exchange_notebook.ipynb  training_mm_notebook.ipynb  working_notebook.ipynb
saved_models/exchange/keep/0.04_model/: best_model.pt  checkpoint_epoch_100.pt  checkpoint_epoch_150.pt  checkpoint_epoch_200.pt  checkpoint_epoch_250.pt  checkpoint_epoch_300.pt  checkpoint_epoch_350.pt  checkpoint_epoch_400.pt  checkpoint_epoch_450.pt  checkpoint_epoch_50.pt  checkpoint_epoch_500.pt  checkpoint_epoch_550.pt  checkpoint_epoch_600.pt  checkpoint_epoch_650.pt  checkpoint_epoch_700.pt  checkpoint_epoch_750.pt  exchange_cfg.json  market_maker_cfg.json  train_exchange_cfg.json
saved_models/market_maker/keep/0.04_model/: best_model.pt  best_model_saved.pt  checkpoint_epoch_10000.pt  checkpoint_epoch_100000.pt  checkpoint_epoch_20000.pt  checkpoint_epoch_30000.pt  checkpoint_epoch_40000.pt  checkpoint_epoch_50000.pt  checkpoint_epoch_60000.pt  checkpoint_epoch_70000.pt  checkpoint_epoch_80000.pt  checkpoint_epoch_90000.pt  market_cfg.json  train_mm_cfg.json
saved_models/market_maker/keep/_model/: market_cfg.json  (+2 more)
scripts/: plotting.py  train_exchange.py  train_mm.py  utils.py
src/optimal_market_maker_exchange_contract_drl/: __init__.py  a2c.py  agent.py  dynamics.py  functions.py  hamiltonians.py  nnets.py  plotting.py  principal.py  utils.py
(+3 files in other folders)
